<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity"
	android:orientation="vertical"
	android:background="@drawable/radial_gradient">
	<LinearLayout
		android:layout_marginTop="25sp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:baselineAligned="false">
		<LinearLayout
			android:layout_width="0sp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center">
			<LinearLayout
				android:layout_width="50sp"
				android:layout_height="wrap_content"
				android:background="@drawable/rounded_corners"
				android:gravity="center">
				<ImageView
					android:layout_width="40sp"
					android:layout_height="50sp"
					android:src="@drawable/calculator"
					android:contentDescription="@string/calculator" />
			</LinearLayout>
			<TextView
				android:textColor="@color/white"
				android:layout_marginTop="5sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/calculator2"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0sp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center">
			<LinearLayout
				android:layout_width="50sp"
				android:layout_height="wrap_content"
				android:background="@drawable/rounded_corners"
				android:gravity="center">
				<ImageView
					android:layout_width="40sp"
					android:layout_height="50sp"
					android:src="@drawable/easypaisa"
					android:contentDescription="@string/calculator" />
			</LinearLayout>
			<TextView
				android:textColor="@color/white"
				android:layout_marginTop="5sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/easypaisa"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0sp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center">
			<LinearLayout
				android:layout_width="50sp"
				android:layout_height="wrap_content"
				android:background="@drawable/rounded_corners"
				android:gravity="center">
				<ImageView
					android:layout_width="40sp"
					android:layout_height="50sp"
					android:src="@drawable/camera"
					android:contentDescription="@string/camera" />
			</LinearLayout>
			<TextView
				android:textColor="@color/white"
				android:layout_marginTop="5sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/camera"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0sp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center">
			<LinearLayout
				android:layout_width="50sp"
				android:layout_height="wrap_content"
				android:background="@drawable/rounded_corners"
				android:gravity="center">
				<ImageView
					android:layout_width="40sp"
					android:layout_height="50sp"
					android:src="@drawable/facebook"
					android:contentDescription="@string/calculator" />
			</LinearLayout>
			<TextView
				android:textColor="@color/white"
				android:layout_marginTop="5sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/facebook"/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:layout_marginTop="25sp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:baselineAligned="false">
		<LinearLayout
			android:layout_width="0sp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center">
			<LinearLayout
				android:layout_width="50sp"
				android:layout_height="wrap_content"
				android:background="@drawable/rounded_corners"
				android:gravity="center">
				<ImageView
					android:layout_width="40sp"
					android:layout_height="50sp"
					android:src="@drawable/clock"
					android:contentDescription="@string/calculator" />
			</LinearLayout>
			<TextView
				android:textColor="@color/white"
				android:layout_marginTop="5sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/clock"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0sp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center">
			<LinearLayout
				android:layout_width="50sp"
				android:layout_height="wrap_content"
				android:background="@drawable/rounded_corners"
				android:gravity="center">
				<ImageView
					android:layout_width="40sp"
					android:layout_height="50sp"
					android:src="@drawable/foodpanda"
					android:contentDescription="@string/calculator" />
			</LinearLayout>
			<TextView
				android:textColor="@color/white"
				android:layout_marginTop="5sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/foodpanda"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0sp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center">
			<LinearLayout
				android:layout_width="50sp"
				android:layout_height="50sp"
				android:background="@drawable/rounded_corners"
				android:gravity="center">
				<ImageView
					android:layout_width="40sp"
					android:layout_height="35sp"
					android:src="@drawable/play_music"
					android:contentDescription="@string/calculator" />
			</LinearLayout>
			<TextView
				android:textColor="@color/white"
				android:layout_marginTop="5sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/play_music"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0sp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center">
			<LinearLayout
				android:layout_width="50sp"
				android:layout_height="wrap_content"
				android:background="@drawable/rounded_corners"
				android:gravity="center">
				<ImageView
					android:layout_width="40sp"
					android:layout_height="50sp"
					android:src="@drawable/messenger"
					android:contentDescription="@string/calculator" />
			</LinearLayout>
			<TextView
				android:textColor="@color/white"
				android:layout_marginTop="5sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/messenger"/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:layout_marginTop="25sp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:baselineAligned="false">
		<LinearLayout
			android:layout_width="0sp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center">
			<LinearLayout
				android:layout_width="50sp"
				android:layout_height="wrap_content"
				android:background="@drawable/rounded_corners"
				android:gravity="center">
				<ImageView
					android:layout_width="40sp"
					android:layout_height="50sp"
					android:src="@drawable/instagram"
					android:contentDescription="@string/calculator" />
			</LinearLayout>
			<TextView
				android:textColor="@color/white"
				android:layout_marginTop="5sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/instagram"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0sp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center">
			<LinearLayout
				android:layout_width="50sp"
				android:layout_height="wrap_content"
				android:background="@drawable/rounded_corners"
				android:gravity="center">
				<ImageView
					android:layout_width="40sp"
					android:layout_height="50sp"
					android:src="@drawable/twitter"
					android:contentDescription="@string/calculator" />
			</LinearLayout>
			<TextView
				android:textColor="@color/white"
				android:layout_marginTop="5sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/twitter"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0sp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center">
			<LinearLayout
				android:layout_width="50sp"
				android:layout_height="50sp"
				android:background="@drawable/rounded_corners"
				android:gravity="center">
				<ImageView
					android:layout_width="40sp"
					android:layout_height="35sp"
					android:src="@drawable/whatsapp"
					android:contentDescription="@string/calculator" />
			</LinearLayout>
			<TextView
				android:textColor="@color/white"
				android:layout_marginTop="5sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/whatsapp"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0sp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center">
			<LinearLayout
				android:layout_width="50sp"
				android:layout_height="wrap_content"
				android:background="@drawable/rounded_corners"
				android:gravity="center">
				<ImageView
					android:layout_width="40sp"
					android:layout_height="50sp"
					android:src="@drawable/maps"
					android:contentDescription="@string/calculator" />
			</LinearLayout>
			<TextView
				android:textColor="@color/white"
				android:layout_marginTop="5sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/google_maps"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>